--- a/EP_calc_to_folders.ipynb
+++ b/EP_calc_to_folders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -296,10 +296,10 @@
     "    table = pq.read_table(file)\n",
     "    \n",
     "    # Perform the aggregation: max the Loss column grouped by EventId, PeriodId, LobName, and LocationId\n",
-    "    grouped_table_1 = table.group_by(['EventId', 'PeriodId', 'LobName', 'LocationId']).aggregate([('Loss', 'mean')])\n",
-    "    grouped_table_1 = grouped_table_1.rename_columns(['EventId', 'PeriodId', 'LobName', 'LocationId', 'Max_Loss'])\n",
-    "    grouped_table_1 = grouped_table_1.group_by(['EventId', 'PeriodId', 'LobName']).aggregate([('Max_Loss', 'sum')])\n",
-    "    grouped_table_1 = grouped_table_1.rename_columns(['EventId', 'PeriodId', 'LobName', 'Max_Loss'])\n",
+    "    grouped_table_1 = table.group_by(['EventId', 'PeriodId', 'LobName', 'EventDate']).aggregate([('Loss', 'sum')])\n",
+    "    grouped_table_1 = grouped_table_1.rename_columns(['EventId', 'PeriodId', 'LobName', 'EventDate', 'Sum_Loss'])\n",
+    "    #grouped_table_1 = grouped_table_1.group_by(['EventId', 'PeriodId', 'LobName']).aggregate([('Sum_Loss', 'sum')])\n",
+    "   # grouped_table_1 = grouped_table_1.rename_columns(['EventId', 'PeriodId', 'LobName', 'Max_Loss'])\n",
     "    \n",
     "    # Perform the aggregation: sum the Loss column grouped by EventId, PeriodId, and LobName\n",
     "    grouped_table_2 = table.group_by(['EventId', 'PeriodId', 'LobName']).aggregate([('Loss', 'sum')])\n",
@@ -320,9 +320,9 @@
     "final_table_2 = pa.concat_tables(final_grouped_table_2)\n",
     "\n",
     "# Perform final grouping and sorting\n",
-    "f_grouped_table_1 = final_table_1.group_by(['EventId', 'PeriodId', 'LobName']).aggregate([('Max_Loss', 'sum')])\n",
+    "f_grouped_table_1 = final_table_1.group_by(['EventId', 'PeriodId', 'LobName']).aggregate([('Sum_Loss', 'sum')])\n",
     "f_grouped_table_2 = final_table_2.group_by(['EventId', 'PeriodId', 'LobName']).aggregate([('Sum_Loss', 'sum')])\n",
-    "sorted_final_table_1 = f_grouped_table_1.sort_by([('Max_Loss_sum', 'descending')])\n",
+    "sorted_final_table_1 = f_grouped_table_1.sort_by([('Sum_Loss_sum', 'descending')])\n",
     "sorted_final_table_2 = f_grouped_table_2.sort_by([('Sum_Loss_sum', 'descending')])\n",
     "\n",
     "# Convert to pandas DataFrames\n",
@@ -347,7 +347,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import shutil\n",
+    "\n",
+    "# # Delete the final concatenated files\n",
+    "# if os.path.exists(final_oep_path):\n",
+    "#     os.remove(final_oep_path)\n",
+    "# if os.path.exists(final_aep_path):\n",
+    "#     os.remove(final_aep_path)\n",
+    "\n",
+    "# # Delete all files in the processing folder\n",
+    "# for f in os.listdir(processing_folder_path):\n",
+    "#     file_path = os.path.join(processing_folder_path, f)\n",
+    "#     if os.path.isfile(file_path):\n",
+    "#         os.remove(file_path)\n",
+    "\n",
+    "# # Delete the processing folder if it is empty\n",
+    "# if not os.listdir(processing_folder_path):\n",
+    "#     os.rmdir(processing_folder_path)\n",
+    "\n",
+    "# print(f'Deleted final files and cleaned up processing folder: {processing_folder_path}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,148 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>EventId</th>\n",
-       "      <th>PeriodId</th>\n",
-       "      <th>LobName</th>\n",
-       "      <th>Max_Loss_sum</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>53895970</td>\n",
-       "      <td>207557</td>\n",
-       "      <td>SPER</td>\n",
-       "      <td>2.250859e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>53891598</td>\n",
-       "      <td>149148</td>\n",
-       "      <td>SPER</td>\n",
-       "      <td>2.197889e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>53893301</td>\n",
-       "      <td>4312</td>\n",
-       "      <td>SPER</td>\n",
-       "      <td>2.160561e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>53893301</td>\n",
-       "      <td>154312</td>\n",
-       "      <td>SPER</td>\n",
-       "      <td>2.092983e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>53891598</td>\n",
-       "      <td>199148</td>\n",
-       "      <td>SPER</td>\n",
-       "      <td>1.993543e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7374263</th>\n",
-       "      <td>53876702</td>\n",
-       "      <td>165828</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>1.870107e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7374264</th>\n",
-       "      <td>53865125</td>\n",
-       "      <td>130081</td>\n",
-       "      <td>AGR</td>\n",
-       "      <td>1.669423e-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7374265</th>\n",
-       "      <td>53881107</td>\n",
-       "      <td>82560</td>\n",
-       "      <td>AUTO</td>\n",
-       "      <td>8.474226e-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7374266</th>\n",
-       "      <td>53872002</td>\n",
-       "      <td>212031</td>\n",
-       "      <td>AGR</td>\n",
-       "      <td>6.278728e-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7374267</th>\n",
-       "      <td>53885692</td>\n",
-       "      <td>249127</td>\n",
-       "      <td>SPER</td>\n",
-       "      <td>3.690754e-04</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7374268 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          EventId  PeriodId LobName  Max_Loss_sum\n",
-       "0        53895970    207557    SPER  2.250859e+10\n",
-       "1        53891598    149148    SPER  2.197889e+10\n",
-       "2        53893301      4312    SPER  2.160561e+10\n",
-       "3        53893301    154312    SPER  2.092983e+10\n",
-       "4        53891598    199148    SPER  1.993543e+10\n",
-       "...           ...       ...     ...           ...\n",
-       "7374263  53876702    165828    AUTO  1.870107e-03\n",
-       "7374264  53865125    130081     AGR  1.669423e-03\n",
-       "7374265  53881107     82560    AUTO  8.474226e-04\n",
-       "7374266  53872002    212031     AGR  6.278728e-04\n",
-       "7374267  53885692    249127    SPER  3.690754e-04\n",
-       "\n",
-       "[7374268 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataframe_1_oep"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +554,148 @@
        "[7374268 rows x 4 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe_1_oep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EventId</th>\n",
+       "      <th>PeriodId</th>\n",
+       "      <th>LobName</th>\n",
+       "      <th>Sum_Loss_sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53895970</td>\n",
+       "      <td>207557</td>\n",
+       "      <td>SPER</td>\n",
+       "      <td>2.250859e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>53891598</td>\n",
+       "      <td>149148</td>\n",
+       "      <td>SPER</td>\n",
+       "      <td>2.197889e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53893301</td>\n",
+       "      <td>4312</td>\n",
+       "      <td>SPER</td>\n",
+       "      <td>2.160561e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>53893301</td>\n",
+       "      <td>154312</td>\n",
+       "      <td>SPER</td>\n",
+       "      <td>2.092983e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53891598</td>\n",
+       "      <td>199148</td>\n",
+       "      <td>SPER</td>\n",
+       "      <td>1.993543e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7374263</th>\n",
+       "      <td>53876702</td>\n",
+       "      <td>165828</td>\n",
+       "      <td>AUTO</td>\n",
+       "      <td>1.870107e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7374264</th>\n",
+       "      <td>53865125</td>\n",
+       "      <td>130081</td>\n",
+       "      <td>AGR</td>\n",
+       "      <td>1.669423e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7374265</th>\n",
+       "      <td>53881107</td>\n",
+       "      <td>82560</td>\n",
+       "      <td>AUTO</td>\n",
+       "      <td>8.474226e-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7374266</th>\n",
+       "      <td>53872002</td>\n",
+       "      <td>212031</td>\n",
+       "      <td>AGR</td>\n",
+       "      <td>6.278728e-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7374267</th>\n",
+       "      <td>53885692</td>\n",
+       "      <td>249127</td>\n",
+       "      <td>SPER</td>\n",
+       "      <td>3.690754e-04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7374268 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          EventId  PeriodId LobName  Sum_Loss_sum\n",
+       "0        53895970    207557    SPER  2.250859e+10\n",
+       "1        53891598    149148    SPER  2.197889e+10\n",
+       "2        53893301      4312    SPER  2.160561e+10\n",
+       "3        53893301    154312    SPER  2.092983e+10\n",
+       "4        53891598    199148    SPER  1.993543e+10\n",
+       "...           ...       ...     ...           ...\n",
+       "7374263  53876702    165828    AUTO  1.870107e-03\n",
+       "7374264  53865125    130081     AGR  1.669423e-03\n",
+       "7374265  53881107     82560    AUTO  8.474226e-04\n",
+       "7374266  53872002    212031     AGR  6.278728e-04\n",
+       "7374267  53885692    249127    SPER  3.690754e-04\n",
+       "\n",
+       "[7374268 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,12 +817,12 @@
     "import pyarrow as pa\n",
     "import pyarrow.parquet as pq\n",
     "\n",
-    "def process_and_save_parquet_2(dataframe_1_oep, dataframe_1_aep, parquet_file_path, speriod, samples):\n",
-    "    dataframe_2 = dataframe_1_oep.groupby(['PeriodId', 'LobName'], as_index=False).agg({'Max_Loss_sum': 'max'})\n",
-    "    dataframe_2.rename(columns={'Max_Loss_sum': 'Max_Loss'}, inplace=True)\n",
+    "def process_and_save_parquet_2(dataframe_1_oep, parquet_file_path, speriod, samples):\n",
+    "    dataframe_2 = dataframe_1_oep.groupby(['PeriodId', 'LobName'], as_index=False).agg({'Sum_Loss_sum': 'max'})\n",
+    "    dataframe_2.rename(columns={'Sum_Loss_sum': 'Max_Loss'}, inplace=True)\n",
     "    dataframe_2 = dataframe_2.sort_values(by='Max_Loss', ascending=False)\n",
     "\n",
-    "    dataframe_3 = dataframe_1_aep.groupby(['PeriodId', 'LobName'], as_index=False).agg({'Sum_Loss_sum': 'sum'})\n",
+    "    dataframe_3 = dataframe_1_oep.groupby(['PeriodId', 'LobName'], as_index=False).agg({'Sum_Loss_sum': 'sum'})\n",
     "    dataframe_3.rename(columns={'Sum_Loss_sum': 'S_Sum_Loss'}, inplace=True)\n",
     "    dataframe_3 = dataframe_3.sort_values(by='S_Sum_Loss', ascending=False)\n",
     "\n",
@@ -884,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,14 +927,14 @@
     "\n",
     "pq_file_path_6=os.path.join(main_folder_path, 'EP', 'Lob', 'GU', f'ILC2024_EUWS_PLA_WI_EP_{country}_EUR_EP_Lob_GU_5.parquet')\n",
     "\n",
-    "pq_file_path_7=os.path.join(main_folder_path, 'EP', 'Lob', 'GU', f'ILC2024_EUWS_PLA_WI_EP_{country}_EUR_EP_Lob_GU_6.parquet')\n",
+    "pq_file_path_7=os.path.join(main_folder_path, 'EP', 'Lob', 'GU', f'ILC2024_EUWS_PLA_WI_EP_{country}_EUR_EP_Lob_GU_6.parquet'\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -924,38 +951,38 @@
    ],
    "source": [
     "try:\n",
-    "    process_and_save_parquet_2(daf_AGR_oep,daf_AGR_aep, pq_file_path_1, speriod, samples)\n",
-    "except NameError:\n",
+    "    process_and_save_parquet_2(daf_AGR_oep, daf_AGR_aep, pq_file_path_1, speriod, samples)\n",
+    "except (NameError, AttributeError):\n",
     "    pass\n",
     "\n",
     "try:\n",
-    "    process_and_save_parquet_2(daf_AUTO_oep,daf_AUTO_aep, pq_file_path_2, speriod, samples)\n",
-    "except NameError:\n",
+    "    process_and_save_parquet_2(daf_AUTO_oep, daf_AUTO_aep, pq_file_path_2, speriod, samples)\n",
+    "except (NameError, AttributeError):\n",
     "    pass\n",
     "\n",
     "try:\n",
-    "    process_and_save_parquet_2(daf_COM_oep,daf_COM_aep, pq_file_path_3, speriod, samples)\n",
-    "except NameError:\n",
+    "    process_and_save_parquet_2(daf_COM_oep, daf_COM_aep, pq_file_path_3, speriod, samples)\n",
+    "except (NameError, AttributeError):\n",
     "    pass\n",
     "\n",
     "try:\n",
-    "    process_and_save_parquet_2(daf_IND_oep,daf_IND_aep, pq_file_path_4, speriod, samples)\n",
-    "except NameError:\n",
+    "    process_and_save_parquet_2(daf_IND_oep, daf_IND_aep, pq_file_path_4, speriod, samples)\n",
+    "except (NameError, AttributeError):\n",
     "    pass\n",
     "\n",
     "try:\n",
-    "    process_and_save_parquet_2(daf_SPER_oep,daf_SPER_aep, pq_file_path_5, speriod, samples)\n",
-    "except NameError:\n",
+    "    process_and_save_parquet_2(daf_SPER_oep, daf_SPER_aep, pq_file_path_5, speriod, samples)\n",
+    "except (NameError, AttributeError):\n",
     "    pass\n",
     "\n",
     "try:\n",
-    "    process_and_save_parquet_2(daf_FRST_oep,daf_FRST_aep, pq_file_path_6, speriod, samples)\n",
-    "except NameError:\n",
+    "    process_and_save_parquet_2(daf_FRST_oep, daf_FRST_aep, pq_file_path_6, speriod, samples)\n",
+    "except (NameError, AttributeError):\n",
     "    pass\n",
     "\n",
     "try:\n",
-    "    process_and_save_parquet_2(daf_GLH_oep,daf_GLH_aep, pq_file_path_7, speriod, samples)\n",
-    "except NameError:\n",
+    "    process_and_save_parquet_2(daf_GLH_oep, daf_GLH_aep, pq_file_path_7, speriod, samples)\n",
+    "except (NameError, AttributeError):\n",
     "    pass"
    ]
   },
@@ -975,6 +1002,31 @@
    "outputs": [],
    "source": [
     "#now for EP portfoilio GU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rough delete inside"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rough delete inside "
    ]
   },
   {
